--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "mocha && standard"
   },
   "dependencies": {
-    "probot": "^0.7.2"
+    "probot": "^0.7.2",
+    "raven": "^2.2.1"
   },
   "devDependencies": {
     "expect": "^1.20.2",
