--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
   "repository": "https://github.com/erickzhao/invite-contributors.git",
   "scripts": {
     "start": "probot run ./index.js",
-    "test": "mocha && standard"
+    "test": "mocha && standard",
+    "report-coverage": "nyc mocha && codecov"
   },
   "dependencies": {
     "probot": "^3.0.0"
   },
   "devDependencies": {
+    "codecov": "^2.3.1",
     "expect": "^1.20.2",
     "localtunnel": "^1.8.2",
     "mocha": "^3.2.0",
+    "nyc": "^11.2.1",
     "standard": "^10.0.3"
   },
   "engines": {
