--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "repository": "https://github.com/erickzhao/invite-contributors.git",
   "scripts": {
     "start": "probot run ./index.js",
-    "test": "mocha && standard",
-    "report-coverage": "nyc mocha && codecov"
+    "test": "nyc mocha && standard",
+    "report-coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov"
   },
   "dependencies": {
     "probot": "^3.0.0"
